[package]
name = "earl-syntax"
version = "0.1.0"
authors = ["Davíð Helgason <david@reiknir.it>"]
edition = "2018"
description = "A simple tokenizer and parser for the language Earl."
readme = "README.md"
homepage = "https://github.com/davidhs/earl-syntax-rs"
repository = "https://github.com/davidhs/earl-syntax-rs"
license = "MIT"

[dependencies]
